--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -34,6 +34,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <DefineConstants>
     </DefineConstants>
+    <IsPublishable>False</IsPublishable>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>27F45DA7368268D3B9790B934BC952BAB41ECD65</ManifestCertificateThumbprint>
@@ -50,9 +51,7 @@
   <PropertyGroup>
     <SignManifests>false</SignManifests>
   </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>Chronokeep.pfx</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'x64|AnyCPU'">
     <OutputPath>bin\x64\</OutputPath>
     <Optimize>true</Optimize>
@@ -85,6 +84,12 @@
   <PropertyGroup>
     <StartupObject>Chronokeep.App</StartupObject>
     <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>D:\ChronoKeep\ChronoKeepWindows\chronokeep-sign-key.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <IsPublishable>False</IsPublishable>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="IO\HtmlTemplates\css\bootstrap-grid.css" />
@@ -190,7 +195,7 @@
     <PackageReference Include="System.ValueTuple">
       <Version>4.5.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.2" />
     <PackageReference Include="WPF-UI" Version="3.0.0" />
   </ItemGroup>
   <ItemGroup>
