--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -207,50 +207,8 @@
     <PackageReference Include="WPF-UI" Version="3.0.5" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-grid.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-grid.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-grid.min.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-grid.min.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-grid.rtl.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-grid.rtl.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-grid.rtl.min.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-grid.rtl.min.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-reboot.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-reboot.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-reboot.min.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-reboot.min.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-reboot.rtl.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-reboot.rtl.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-reboot.rtl.min.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-reboot.rtl.min.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-utilities.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-utilities.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-utilities.min.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-utilities.min.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-utilities.rtl.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-utilities.rtl.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-utilities.rtl.min.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap-utilities.rtl.min.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap.min.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap.min.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap.rtl.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap.rtl.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap.rtl.min.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\bootstrap.rtl.min.css.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\js\bootstrap.bundle.js" />
-    <EmbeddedResource Include="IO\HtmlTemplates\js\bootstrap.bundle.js.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\js\bootstrap.bundle.min.js" />
-    <EmbeddedResource Include="IO\HtmlTemplates\js\bootstrap.bundle.min.js.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\js\bootstrap.esm.js" />
-    <EmbeddedResource Include="IO\HtmlTemplates\js\bootstrap.esm.js.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\js\bootstrap.esm.min.js" />
-    <EmbeddedResource Include="IO\HtmlTemplates\js\bootstrap.esm.min.js.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\js\bootstrap.js" />
-    <EmbeddedResource Include="IO\HtmlTemplates\js\bootstrap.js.map" />
-    <EmbeddedResource Include="IO\HtmlTemplates\js\bootstrap.min.js" />
-    <EmbeddedResource Include="IO\HtmlTemplates\js\bootstrap.min.js.map" />
+    <EmbeddedResource Include="IO\HtmlTemplates\js\*" />
+    <EmbeddedResource Include="IO\HtmlTemplates\css\*" />
     <EmbeddedResource Include="version.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -288,9 +246,6 @@
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>HtmlResultsTemplate.cs</LastGenOutput>
     </Content>
-    <EmbeddedResource Include="IO\HtmlTemplates\js\jquery.min.js" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\style.css" />
-    <EmbeddedResource Include="IO\HtmlTemplates\css\style.min.css" />
   </ItemGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
@@ -311,205 +266,19 @@
     <None Update="gswin32c.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="help\about.html">
+    <None Update="help\*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="help\age-groups.html">
+    <None Update="help\*\*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="help\announcer.html">
+    <None Update="help\*\*\*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="help\chips.html">
+    <None Update="changelog\*.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="help\css\bootstrap.min.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\css\style.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\dashboard.html">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\distances.html">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\fonts\bootstrap-icons.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\fonts\bootstrap-icons.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\fonts\bootstrap-icons.min.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\fonts\bootstrap-icons.scss">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\fonts\fonts\bootstrap-icons.woff">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\fonts\fonts\bootstrap-icons.woff2">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\icons\icon.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\About.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Age-Groups.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Announcer.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Awards.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Bib-Chip-Tool.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Change-Event.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Chips.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Dashboard-Empty.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Dashboard-Time.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Distances-Distance.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Distances-Time.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Export.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Import-Chips.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Import-Distances.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Import-First.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Imports-Conflicts.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Link-API-1.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Link-API-2.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Link-API-3.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Locations-Distance.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Locations-Time.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Manage-API.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Modify-Multiple-Participant.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Modify-Participant-Default.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\New-Event.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Participants.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Print-Results.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Raw-Reads.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Segments.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Settings.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Stats-Page.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Timing-Default.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\images\Timing-Page-Buttons.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\index.html">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\js\bootstrap.min.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\js\jquery.min.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\locations.html">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\participants.html">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\segments.html">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\settings.html">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="help\timing.html">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Sounds\alert-1.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Sounds\alert-2.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Sounds\alert-3.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Sounds\alert-4.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Sounds\alert-5.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Sounds\emily-alert-runner-here.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Sounds\emily-runner-arrived.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Sounds\emily-runner-here.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Sounds\michael-alert-runner-here.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Sounds\michael-runner-arrived.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Sounds\michael-runner-here.wav">
+    <None Update="Sounds\*.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="wkhtmltopdf.exe">
