Fixed an issue where birthdays were not being set correctly Fixed an issue where participants wouldn't upload when the birthday was set to a value that wasn't possible Fixed an issue where the next and cancel buttons wouldn't re-enabled if there were multiple headers detected on participant import

--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -281,6 +281,9 @@
     <None Update="Sounds\*.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="changelog\1.7.1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="wkhtmltopdf.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
