Updated NuGet packages. Modified AnnouncerWorker to ignore errors when processing data. Modified AnnouncerWindow to ignore exceptions when getting results and participants while trying to update the window. Fixed an issue with UpdateTiming in the AnnouncerWindow where the check for a remote announcer would have caused an identity crisis if there was a remote announcer. Added a sort to the connected timing systems. Changed how the program creates blank timing systems from relying on the number of connected systems to relying on the number of known systems. Changed the timing update tick from half a second to two tenths of a second.

--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -27,8 +27,9 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
     <UseWPF>true</UseWPF>
-	<UseWindowsForms>true</UseWindowsForms>
+    <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+    <ProjectGuid>{19A9995C-79B6-4A3C-9906-F391FB1BA33D}</ProjectGuid>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -198,13 +199,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
-    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="5.0.0" />
     <PackageReference Include="Hardware.Info" Version="101.0.1.1" />
-    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.12.0" />
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="9.0.5" />
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.14.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="9.0.9" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
-    <PackageReference Include="Twilio" Version="7.11.1" />
-    <PackageReference Include="WPF-UI" Version="4.0.2" />
+    <PackageReference Include="Twilio" Version="7.13.0" />
+    <PackageReference Include="WPF-UI" Version="4.0.3" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="IO\HtmlTemplates\js\*" />
