--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -203,6 +203,7 @@
     <PackageReference Include="Hardware.Info" Version="101.0.1.1" />
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.14.0" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="9.0.9" />
+    <PackageReference Include="Sentry" Version="5.15.0" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
     <PackageReference Include="Twilio" Version="7.13.0" />
     <PackageReference Include="WPF-UI" Version="4.0.3" />
