Fixed an issue I caused that made the dashboard page not reload the event when it changed. Added clocks to the database and started the UI to control them. Potentially fixed an issue with holding open handles for windows that closed.

--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -193,6 +193,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>ResultsPrintableAgeGroup.tt</DependentUpon>
     </Compile>
+    <Compile Update="UI\Timing\ClockControl.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Chronokeep.pfx" />
